--- a/imt.html
+++ b/imt.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Kalkulator Indeks Massa Tubuh</title>
+  </head>
+  <body>
+    <h1>Kalkulator Indeks Massa Tubuh</h1>
+    <label for="berat-badan">Berat Badan (kg):</label>
+    <input type="number" id="berat-badan">
+    <br><br>
+    <label for="tinggi-badan">Tinggi Badan (cm):</label>
+    <input type="number" id="tinggi-badan">
+    <br><br>
+    <button onclick="hitungBMI()">Hitung</button>
+    <br><br>
+    <div id="hasil"></div>
 
-<head>
-  <title>Kalkulator BMI</title>
-</head>
+<script type="text/javascript">
+  
+  function hitungBMI() {
+  var berat = document.getElementById("berat-badan").value;
+  var tinggi = document.getElementById("tinggi-badan").value;
+  var bmi = berat / Math.pow(tinggi/100, 2);
+  var keterangan = "";
+  
+  if (bmi < 18.5) {
+    keterangan = "Berat badan kurang";
+  } else if (bmi >= 18.5 && bmi < 25) {
+    keterangan = "Berat badan normal";
+  } else if (bmi >= 25 && bmi < 30) {
+    keterangan = "Berat badan berlebih";
+  } else {
+    keterangan = "Obesitas";
+  }
+  
+  var hasil = "BMI Anda: " + bmi.toFixed(1) + "<br>";
+  hasil += "Keterangan: " + keterangan;
+  document.getElementById("hasil").innerHTML = hasil;
+}
 
-<body>
-  <h1>Kalkulator BMI</h1>
-  <label for="berat">Berat Badan (kg):</label>
-  <input type="number" id="berat">
-  <br>
-  <label for="tinggi">Tinggi Badan (cm):</label>
-  <input type="number" id="tinggi">
-  <br>
-  <button onclick="hitungBMI()">Hitung BMI</button>
-  <br>
-  <p>Hasil:</p>
-  <p id="hasil"></p>
+</script>
 
-  <p>Kurang dari 18,5 berarti berat badan kurang (underweight). <br> Antara 18,5 - 24,9 berarti berat badan normal. <br>
-    Antara 25-29,9 berarti berat badan berlebih (overweight). <br> Di atas 30 berarti obesitas</p>
-
-  <script>
-    function hitungBMI() {
-      // Ambil nilai berat badan dan tinggi badan dari input
-      var berat = document.getElementById("berat").value;
-      var tinggi = document.getElementById("tinggi").value / 100; // ubah ke meter
-
-      // Hitung BMI
-      var bmi = berat / (tinggi * tinggi);
-
-      // Tampilkan hasil
-      document.getElementById("hasil").innerHTML = "BMI Anda: " + bmi.toFixed(1);
-    }
-
-        //tinggal tambahi if else biar tau kalo kita oobesiter atau tiidak
-  </script>
-</body>
-
-</html>
-</body>
-
+  </body>
 </html>
