perbaruan pada tekanan darah

--- a/index.html
+++ b/index.html
@@ -126,16 +126,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
                     </div>
                 </div>
+
+                        <p>
+
+Obesitas adalah penyakit yang terjadi ketika seseorang kelebihan berat badan atau memiliki banyak lemak ekstra. Obesitas dapat meningkatkan risiko berbagai penyakit seperti diabetes, penyakit jantung, stroke dan beberapa jenis kanker.
+Nutrisi seimbang
+Makanlah makanan yang tinggi serat, protein, dan rendah kalori, serta kurangi makanan yang tinggi lemak, gula, dan garam. Hindari makanan olahan dan makanan cepat saji serta perbanyak konsumsi sayur dan buah segar.
+Preferensi Makanan
+Cobalah makan dalam porsi kecil tapi sering dan hindari makan malam. Jangan melewatkan sarapan, karena sarapan dapat membantu metabolisme Anda.
+Kurangi konsumsi minuman bersoda dan alkohol
+Jika Anda sangat gemuk, bicarakan dengan dokter Anda tentang program penurunan berat badan yang sesuai, seperti B. diet rendah kalori, pengobatan, atau operasi penurunan berat badan.
+
+                        </p>
 
             </div>
         </section>
