--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="row">
             <div class="col"></div>
             <div class="col" style="width: 50%">
-              <h3 class="text-center">IMT &amp; PENJELASAN</h3>
+              <h3 class="text-center" style="font-size: clamp(20px, 3vw, 100px);">IMT &amp; PENJELASAN</h3>
               <hr />
             </div>
             <div class="col"></div>
