--- a/imt.html
+++ b/imt.html
@@ -15,7 +15,7 @@
     <br><br>
     <div id="hasil"></div>
     <br>
-    <pre id="penjelasan"></pre>
+    <pre style="font-family: Roboto;" id="penjelasan"></pre>
 
 <link rel="stylesheet" type="text/css" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
 <script type="text/javascript">
@@ -51,7 +51,7 @@
 
   } else {
     keterangan = "Obesitas";
-    saran = "1. Obesitas adalah penyakit yang terjadi ketika seseorang kelebihan berat badan atau memiliki banyak lemak ekstra. Obesitas dapat meningkatkan risiko berbagai penyakit seperti diabetes, penyakit jantung, stroke dan beberapa jenis kanker. \n2.Nutrisi seimbang \nMakanlah makanan yang tinggi serat, protein, dan rendah kalori, serta kurangi makanan yang tinggi lemak, gula, dan garam. \n3. Hindari makanan olahan dan makanan cepat saji serta perbanyak konsumsi sayur dan buah segar. \n4. Preferensi Makanan \nCobalah makan dalam porsi kecil tapi sering dan hindari makan malam. Jangan melewatkan sarapan, karena sarapan dapat membantu metabolisme Anda. \n5. Jika Anda sangat gemuk, bicarakan dengan dokter Anda tentang program penurunan berat badan yang sesuai, seperti B. diet rendah kalori, pengobatan, atau operasi penurunan berat badan.";
+    saran = "1. Obesitas adalah penyakit yang terjadi ketika seseorang kelebihan berat badan atau memiliki banyak lemak ekstra. \nObesitas dapat meningkatkan risiko berbagai penyakit seperti diabetes, penyakit jantung, stroke dan beberapa jenis kanker. \n2.Nutrisi seimbang Makanlah makanan yang tinggi serat, protein, dan rendah kalori, serta kurangi makanan yang tinggi lemak, gula, dan garam. \n3. Hindari makanan olahan dan makanan cepat saji serta perbanyak konsumsi sayur dan buah segar. \n4. Preferensi Makanan : Cobalah makan dalam porsi kecil tapi sering dan hindari makan malam. Jangan melewatkan sarapan, karena sarapan dapat membantu metabolisme Anda. \n5. Jika Anda sangat gemuk, bicarakan dengan dokter Anda tentang program penurunan berat badan yang sesuai, seperti B. diet rendah kalori, pengobatan, atau operasi penurunan berat badan.";
   }
 
 
