--- a/tekanan darah.html
+++ b/tekanan darah.html
@@ -1,43 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hitung Tekanan Darah</title>
-    <script type="text/javascript" src="script.js"></script>
+  <title>Perhitungan Tekanan Darah</title>
 </head>
 <body>
-    <h2>Hitung Tekanan Darah</h2>
-    <label for="sistolik">Sistolik:</label>
-    <input type="number" id="sistolik">
-    <label for="diastolik">Diastolik:</label>
-    <input type="number" id="diastolik">
-    <button onclick="hitungTekananDarah()">Hitung</button>
-    <p id="tekananDarah"></p>
-
-    <script type="text/javascript">
-        
-        function hitungTekananDarah() {
+  <h1>Perhitungan Tekanan Darah</h1>
+  <label for="sistolik">Sistolik:</label>
+  <input type="number" id="sistolik"><br><br>
+  <label for="diastolik">Diastolik:</label>
+  <input type="number" id="diastolik"><br><br>
+  <button onclick="hitungTekananDarah()">Hitung Tekanan Darah</button><br><br>
+  <span id="hasil">hasil:</span>
+  <br>
+  <span id="keterangan"></span>
+  <br>
+  <pre style="font-family: Roboto;" id="saran2"></pre>
+</body>
+<script type="text/javascript">
+  
+  function hitungTekananDarah() {
   var sistolik = parseInt(document.getElementById("sistolik").value);
   var diastolik = parseInt(document.getElementById("diastolik").value);
-  var tekananDarah = "";
-  if (sistolik <= 90 || diastolik <= 60) {
-    tekananDarah = "Tekanan darah rendah coy coba naikin lagi cuy";
-  } else if (sistolik <= 120 && diastolik <= 80) {
-    tekananDarah = "Tekanan darah normal";
-  } else if (sistolik <= 129 && diastolik <= 84) {
-    tekananDarah = "Prahipertensi";
-  } else if (sistolik <= 139 || diastolik <= 89) {
-    tekananDarah = "Hipertensi tingkat 1";
-  } else if (sistolik <= 159 || diastolik <= 99) {
-    tekananDarah = "Hipertensi tingkat 2";
+  var keterangan = "";
+  var saran2 = "";
+
+  if (isNaN(sistolik) || isNaN(diastolik)) {
+    keterangan = "Silahkan masukkan nilai tekanan darah";
+  } else if (sistolik < 0 || diastolik < 0) {
+    keterangan = "Tidak ada tekanan darah negatif";
+
+
+
+  } else if (sistolik >= 180 || diastolik >= 120) {
+    keterangan = "Tekanan darah Anda sangat tinggi, segera temui dokter";
+    saran2 = "Oleh karena itu, hal terbaik yang dapat dilakukan adalah segera menghubungi nomor darurat medis seperti 119 atau membawa orang yang terkena kondisi tersebut ke unit gawat darurat terdekat. \n1. Tetap tenang dan jangan panik. Tekanan darah yang sangat tinggi dapat menyebabkan kepanikan dan kecemasan, yang dapat memperburuk kondisi.\n2. Santai dan istirahatlah dalam posisi yang nyaman. Cobalah untuk tidak melakukan aktivitas apa pun dan beristirahatlah dalam posisi yang nyaman, mis. B. duduk atau berbaring.\n3. Periksa tekanan darah Anda secara teratur. Jika monitor tekanan darah tersedia, periksa secara teratur untuk memantau tekanan darah.\n4. Hindari makanan atau minuman yang dapat memperburuk kondisi, seperti B. Minuman yang terlalu asin atau berkafein.\n5. Minum air putih secukupnya. Minum air putih yang cukup dapat membantu mengurangi tekanan darah dan menjaga tubuh tetap terhidrasi.\nIngatlah bahwa tekanan darah yang sangat tinggi adalah keadaan darurat medis yang harus ditangani dengan cepat dan tepat oleh tenaga kesehatan profesional. Oleh karena itu, jika Anda atau orang terdekat Anda menderita kondisi ini, jangan ragu untuk segera mencari pertolongan medis.";
+
+
+
+  } else if (sistolik >= 140 || diastolik >= 90) {
+    keterangan = "Tekanan darah Anda tinggi";
+    saran2 = "1. Lakukan pemeriksaan medis:\nJika Anda memiliki gejala tekanan darah tinggi, seperti sakit kepala, pusing, atau dada sesak, segera hubungi dokter. \n2. Perubahan gaya hidup:\nPerubahan gaya hidup dapat membantu mengontrol tekanan darah Anda. Beberapa perubahan yang dapat Anda lakukan adalah: Makan makanan yang sehat dan rendah garam \n* Berolahraga secara teratur \n* Mengurangi konsumsi alkohol \n* Berhenti merokok \n* Mengurangi stres \n3. Minum obat sesuai petunjuk dokter:\nJika dokter meresepkan obat untuk mengontrol tekanan darah Anda, pastikan untuk minum obat tersebut sesuai petunjuk dokter. Jangan menghentikan penggunaan obat tanpa persetujuan dokter. \n4. Pantau tekanan darah Anda secara teratur \nPeriksa tekanan darah Anda secara teratur di rumah dan dokumentasikan hasilnya. Beri tahu dokter Anda tentang tekanan darah Anda pada setiap kunjungan.";
+
+
+
+
+
+
+
+  } else if (sistolik >= 120 || diastolik >= 80) {
+    keterangan = "Tekanan darah Anda normal";
+    saran2 = "1. Makan yang sehat: \nMakan makanan yang sehat dan seimbang seperti sayuran, buah-buahan, biji-bijian, ikan, kacang-kacangan dan daging tanpa lemak. Hindari makanan yang mengandung lemak jenuh dan kolesterol tinggi.\n2. Berolahraga secara teratur:\nLakukan olahraga minimal 30 menit setiap hari, seperti berjalan kaki, joging, berenang, atau bersepeda. Olahraga dapat membantu meningkatkan sirkulasi dan mempertahankan tekanan darah normal.\n3. Kurangi konsumsi garam:\nBatasi penggunaan garam, karena garam dapat meningkatkan tekanan darah. Jangan menambahkan garam pada makanan dan hindari makanan olahan yang tinggi garam.\n4. Kurangi konsumsi alkohol:\nMinum alkohol dapat meningkatkan tekanan darah, jadi batasi atau hindari alkohol sama sekali.";
+
+
+
+
+
+
   } else {
-    tekananDarah = "Hipertensi tingkat 3";
+    keterangan = "Tekanan darah Anda rendah"; 
+    saran2 = "1. Konsumsi air yang cukup:\nMinum cukup air dapat membantu menjaga jumlah darah dalam tubuh, yang mencegah penurunan tekanan darah. Dianjurkan untuk minum setidaknya 8 gelas air setiap hari.\n2. Konsumsi  gara dalam jumlah yang cukup:\nGaram dapat membantu menjaga keseimbangan elektrolit dalam tubuh, yang mencegah penurunan tekanan darah. Namun, konsumsi garam yang berlebihan juga dapat berdampak negatif bagi kesehatan. \nDianjurkan untuk makan garam secara merata.\n3. Konsumsi makanan yang mengandung natrium:\nSodium adalah mineral yang membantu menjaga keseimbangan elektrolit dalam tubuh. Mengonsumsi makanan dengan sodium, seperti daging, ikan, susu, dan kacang-kacangan, dapat membantu menjaga tekanan \ndarah.\n4. Hindari berdiri terlalu lama:\nBerdiri terlalu lama dapat menyebabkan darah menggenang di kaki dan membuat kaki terasa lemas, yang dapat menyebabkan tekanan darah rendah.\nJika Anda harus berdiri dalam waktu lama, usahakan untuk bergerak atau mengangkat kaki secara teratur.";
   }
-  document.getElementById("tekananDarah").innerHTML = "Hasil: " + tekananDarah;
-}
 
 
-    </script>
 
 
-</body>
+
+  hasil += "hasil: " + keterangan;
+  document.getElementById("hasil").innerHTML = "hasil:" + keterangan;
+
+ var penjelasan = document.getElementById("saran2");
+        penjelasan.innerHTML = "";
+        var kata = "saran: " + saran2;
+        var i = 0;
+        var j = 0;
+        var animasi = setInterval(function() {
+          if (i < kata.length) {
+            penjelasan.innerHTML += kata.charAt(i);
+            i++;
+          } else if (j < 3) {
+            penjelasan.innerHTML += ".";
+            j++;
+          } else {
+            clearInterval(animasi);
+          }
+        }, 5);
+      }
+</script>
+
+
 </html>
