--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="particle.css">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -69,9 +70,7 @@
   </head>
 
   <body>
-    <div style="position: absolute; background-color: black">
-      <br />
-    </div>
+    
     <!-- ======= Mobile nav toggle button ======= -->
     <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
     <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -139,7 +138,9 @@
 
     <main id="main">
       <!-- ======= About Section ======= -->
+      
       <section id="about" class="about">
+        <div id="particles-js"></div>
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>INDEX MASSA TUBUH</h2>
@@ -152,7 +153,12 @@
           <div class="row">
             <div class="col"></div>
             <div class="col" style="width: 50%">
-              <h3 class="text-center" style="font-size: clamp(20px, 3vw, 100px);">IMT &amp; PENJELASAN</h3>
+              <h3
+                class="text-center"
+                style="font-size: clamp(20px, 3vw, 100px)"
+              >
+                IMT &amp; PENJELASAN
+              </h3>
               <hr />
             </div>
             <div class="col"></div>
@@ -215,18 +221,25 @@
       <!-- End About Section -->
 
       <!-- ======= TEKANAN DARAH ======= -->
-<section id="about" class="about">
+      <section id="about" class="about">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>TEKANAN DARAH</h2>
             <p>
-              Tekanan darah merupakan tekanan yang terjadi pada pembuluh darah arteri ketika darah kita di pompa oleh jantung untuk di alirkan ke seluruh anggota tubuh.
+              Tekanan darah merupakan tekanan yang terjadi pada pembuluh darah
+              arteri ketika darah kita di pompa oleh jantung untuk di alirkan ke
+              seluruh anggota tubuh.
             </p>
           </div>
           <div class="row">
             <div class="col"></div>
             <div class="col" style="width: 50%">
-              <h3 class="text-center" style="font-size: clamp(20px, 3vw, 100px);">IMT &amp; PENJELASAN</h3>
+              <h3
+                class="text-center"
+                style="font-size: clamp(20px, 3vw, 100px)"
+              >
+                IMT &amp; PENJELASAN
+              </h3>
               <hr />
             </div>
             <div class="col"></div>
@@ -300,7 +313,6 @@
               Quia fugiat sit in iste officiis commodi quidem hic quas.
             </p>
           </div>
-
         </div>
       </section>
       <!-- End Skills Section -->
@@ -333,7 +345,6 @@
               Quia fugiat sit in iste officiis commodi quidem hic quas.
             </p>
           </div>
-
         </div>
       </section>
       <!-- End Portfolio Section -->
@@ -716,6 +727,12 @@
       class="back-to-top d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
     ></a>
+
+    <!-- Particle HTML -->
+        <!-- particles.js container -->  <!-- stats - count particles -->  <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <!-- Particle HTML End  -->
+
+    <script src="particle.js"></script>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
